tests/baselines/reference/unusedInterfaceinNamespace1.errors.txt
tests/cases/compiler/unusedInterfaceinNamespace1.ts(3,15): error TS6132: Variable 'i1' has never been used.


==== tests/cases/compiler/unusedInterfaceinNamespace1.ts (1 errors) ====
    
    namespace Validation {
        interface i1 {
                  ~~
!!! error TS6132: Variable 'i1' has never been used.
    
        }
    }